# zpg

./: .gitignore  CMakeLists.txt  README.md
shaders/: camera_v.glsl  green_f.glsl  green_v.glsl  lambert_f.glsl  lambert_v.glsl  normale_f.glsl  normale_v.glsl  rectangle_f.glsl  triangle_f.glsl  triangle_v.glsl
src/: ICameraObserver.hpp  application.cpp  application.h  camera.cpp  camera.h  drawableObject.cpp  drawableObject.h  main.cpp  model.cpp  model.h  scene.h  shader.cpp  shader.h  shaderFactory.cpp  shaderFactory.h  shaderProgram.cpp  shaderProgram.h  transformation.cpp  transformation.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
src/figures/: figure.cpp  figure.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/models/: bushes.cpp  bushes.h  gift.cpp  gift.h  model.cpp  model.h  plain.cpp  plain.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  suzi_flat.cpp  suzi_flat.h  suzi_smooth.cpp  suzi_smooth.h  tree.cpp  triangle.cpp  triangle.h
src/scenes/: forestScene.cpp  forestScene.hpp  scene.cpp  scene.h  sphereScene.hpp  testScene.hpp
